--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 cycler==0.10.0
 kiwisolver==1.1.0
-matplotlib==3.1.0
+#matplotlib==3.1.0
 numpy==1.16.4
-pkg-resources==0.0.0
 pyparsing==2.4.0
 PyQt5==5.12.2
 PyQt5-sip==4.19.17
