chore: lower numpy version requirement + some refresh

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 name = "cubix"
-version = "1.1.1"
+version = "1.1.2"
 description = "Persistent homology using KDE"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "numpy>=2.2.0",
+    "numpy>=1.22.0",
     "scipy>=1.14.1",
 ]
 
@@ -23,3 +23,7 @@ dev = [
     "ipykernel>=6.29.5",
     "ipython>=8.30.0",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
